<resources>
  <string name="app_name">c:geo</string>
  <string name="app_name_compass">c:geo compass</string>
  <string name="cache">Cache</string>
  <string name="detail">Detail</string>
  <string name="search">Search</string>
  <string name="settings">Settings</string>
  <string name="helpers">What to install</string>
  <string name="about">About c:geo</string>
  <string name="helper">Do you want to learn about <b>c:geo</b>?\nCheck our easy to read manual.</string>
  <string name="database_error_title">Problem with database</string>
  <string name="database_error_message">c:geo failed to connect to internal database.\nPlease try to start c:geo a bit later. If this message has been showed for many times, proceed to phone Settings / Applications / c:geo and hit the Clear Data button. Or uninstall and install c:geo again. Sorry for inconvenience.</string>
  <string name="action_bar_share_title">Share link to cache</string>
  <string name="all">All caches</string>
  <string name="all_types">All cache types</string>
  <string name="traditional">Traditional cache</string>
  <string name="multi">Multi-cache</string>
  <string name="mystery">Unknown cache</string>
  <string name="letterbox">Letterbox hybrid</string>
  <string name="event">Event cache</string>
  <string name="mega">Mega-event cache</string>
  <string name="earth">Earthcache</string>
  <string name="cito">Cache in trash out event</string>
  <string name="webcam">Webcam cache</string>
  <string name="virtual">Virtual cache</string>
  <string name="wherigo">Wherigo cache</string>
  <string name="lostfound">Lost &amp; found</string>
  <string name="ape">Project ape cache</string>
  <string name="gchq">Groundspeak hq</string>
  <string name="gps">GPS cache exhibit</string>
  <string name="wp_final">Final location</string>
  <string name="wp_stage">Stage of multi-cache</string>
  <string name="wp_puzzle">Question for answer</string>
  <string name="wp_pkg">Parking area</string>
  <string name="wp_trailhead">Trailhead</string>
  <string name="wp_waypoint">Reference point</string>
  <string name="log_found">Found</string>
  <string name="log_dnf">Did not find</string>
  <string name="log_note">Note</string>
  <string name="log_published">Published</string>
  <string name="log_enabled">Enabled</string>
  <string name="log_disabled">Disabled</string>
  <string name="log_attend">Will attend</string>
  <string name="log_attended">Attended</string>
  <string name="log_retrieved">Retrieved</string>
  <string name="log_placed">Placed</string>
  <string name="log_grabbed">Grabbed somewhere</string>
  <string name="log_maintained">Maintenance performed</string>
  <string name="log_maintenance_needed">Needs maintenance</string>
  <string name="log_maintenance_owner">Maintenance</string>
  <string name="log_update">Updated coordinates</string>
  <string name="log_archived">Archived</string>
  <string name="log_needs_archived">Needs archived</string>
  <string name="log_discovered">Discovered</string>
  <string name="log_reviewed">Reviewer note</string>
  <string name="log_taken">Visit</string>
  <string name="log_tb_nothing">Do nothing</string>
  <string name="log_tb_visit">Visit</string>
  <string name="log_tb_drop">Drop here</string>
  <string name="log_tb_changeall">Change all</string>
  <string name="log_save">Save</string>
  <string name="log_saving">Saving log…</string>
  <string name="log_clear">Clear</string>
  <string name="log_post">Post log</string>
  <string name="log_post_rate">Post log &amp; rate</string>
  <string name="log_post_no_rate">Post log &amp; do not rate</string>
  <string name="log_add">Add</string>
  <string name="log_date">Date</string>
  <string name="log_time">Time</string>
  <string name="log_date_time">Date &amp; time</string>
  <string name="log_rating">Rating</string>
  <string name="log_no_rating">No rating</string>
  <string name="log_stars_1">1 star</string>
  <string name="log_stars_15">1.5 stars</string>
  <string name="log_stars_2">2 stars</string>
  <string name="log_stars_25">2.5 stars</string>
  <string name="log_stars_3">3 stars</string>
  <string name="log_stars_35">3.5 stars</string>
  <string name="log_stars_4">4 stars</string>
  <string name="log_stars_45">4.5 stars</string>
  <string name="log_stars_5">5 stars</string>
  <string name="log_stars_1_description">poor</string>
  <string name="log_stars_15_description">fairly poor</string>
  <string name="log_stars_2_description">below average</string>
  <string name="log_stars_25_description">not so bad</string>
  <string name="log_stars_3_description">average</string>
  <string name="log_stars_35_description">not bad at all</string>
  <string name="log_stars_4_description">better than average</string>
  <string name="log_stars_45_description">very good</string>
  <string name="log_stars_5_description">awesome</string>
  <string name="log_webcam">Webcam photo taken</string>
  <string name="log_new_log">Log</string>
  <string name="log_new_log_text">Log text</string>
  <string name="log_announcement">Announcement</string>
  <string name="err_none">Ok</string>
  <string name="err_start">Communication not started</string>
  <string name="err_parse">Failed login page parsing</string>
  <string name="about_changelog">Changelog</string>
  <string name="about_donate">Donate</string>
  <string name="about_detail">Details</string>
  <string name="about_donation_more">Donate\ndevelopment</string>
  <string name="about_contributors">Contributors</string>
  <string name="init_signature">Signature</string>
  <string name="init_signature_help_text">Write your signature to use in log text.\nSpecial strings that can be used are: [DATE] , [TIME], [DATETIME], [USER] &amp; [NUMBER].\nThese will be expanded when the signature is inserted.</string>
  <string name="init_signature_template_button">Insert template</string>
  <string name="auth_authorize">Authorize c:geo</string>
  <string name="auth_pin_hint">PIN assigned by Twitter</string>
  <string name="auth_finish">Finish</string>
  <string name="cache_menu_navigate">Navigate</string>
  <string name="cache_menu_around">Caches around</string>
  <string name="waypoint_my_coordinates">My coordinates</string>
  <string name="waypoint_bearing">Bearing</string>
  <string name="waypoint_distance">Distance</string>
  <string name="search_history">History</string>
  <string name="search_clear_history">Clear History</string>
  <string name="search_bar_hint">Search for caches</string>
  <string name="search_bar_desc">Caches (GC-code, keyword), Trackables (TB-code)</string>
  <string name="search_coordinates">Coordinates</string>
  <string name="search_coordinates_button">Search by coordinates</string>
  <string name="search_address">Address</string>
  <string name="search_address_button">Search by address</string>
  <string name="search_gc">GC-code</string>
  <string name="search_gc_button">Search by GC-code</string>
  <string name="search_kw">Keywords</string>
  <string name="search_kw_prefill">Keyword</string>
  <string name="search_kw_button">Search by keyword</string>
  <string name="search_fbu">Found by user</string>
  <string name="search_fbu_prefill">User name</string>
  <string name="search_fbu_button">Search by user name</string>
  <string name="search_hbu">Hidden by users</string>
  <string name="search_hbu_prefill">Owner</string>
  <string name="search_hbu_button">Search by owner name</string>
  <string name="search_tb">Trackable</string>
  <string name="search_tb_hint">Trackable identification</string>
  <string name="search_tb_button">Search for trackable</string>
  <string name="search_direction_rel">From this position</string>
  <string name="quote">To make geocaching easier, to make users lazier.</string>
  <string name="powered_by">carnero</string>
  <string name="support">Support: <a href="mailto:support@cgeo.org">support@cgeo.org</a></string>
  <string name="website">Website: <a href="http://cgeo.org/">cgeo.org</a></string>
  <string name="facebook">Facebook: <a href="http://www.facebook.com/pages/cgeo/297269860090">c:geo page</a></string>
  <string name="twitter">Twitter: <a href="http://twitter.com/android_gc">@android_GC</a></string>
  <string name="nutshellmanual">Manual: <a href="http://manual.cgeo.org/">c:geo in a Nutshell</a></string>
  <string name="about_auth_1">The following process allows <b>c:geo</b> to access Twitter - if agreed.</string>
  <string name="about_auth_2">Click on \"authorize c:geo\" button will start the process. This process will open up a web browser with Twitter page. Login on this page and allow <b>c:geo</b> to access your account. If accepted, Twitter will show up a numeric PIN code. This PIN must be pasted into <b>c:geo</b> and be confirmed. That\'s all.</string>
  <string name="contributors">\n
    · <a href="http://carnero.cc/">carnero</a> as the father of c:geo\n
    \n
    · 0xErnie (localization DE)\n
    · Bananeweizen (code, loc. DE)\n
    · blafoo (code)\n
    · BudBundi (localization DE)\n
    · Charles (localization FR)\n
    · Denny (localization DA)\n
    · Eisbehr (code, open source project leader)\n
    · F. Coello (localization ES)\n
    · Filipe C. (code)\n
    · <a href="http://iirojappinen.com/">Iiro Jäppinen</a> (graphic)\n
    · inkantis (localization PL)\n
    · <a href="http://www.jaytech.cz/">Jan Žatecký</a> (graphic)\n
    · <a href="http://joachim-wilke.de/">JoWi24</a> (code)\n
    · <a href="http://github.com/koem">Karsten Priegnitz</a> (code, artwork computation)\n
    · MichielK (code, loc. NL)\n
    · mucek4 (code, open source project leader)\n
    · ncorreia (code, localization PT)\n
    · Pascal (localization NL)\n
    · Peter (localization HU)\n
    · Rainer S. (code)\n
    · Ray (code, loc. JA)\n
    · <a href="http://seromenho.com/">Ricardo Seromenho</a> (localization PT)\n
    · <a href="http://www.sammyshp.de/">SammysHP</a> (code, localization DE)\n
    · <a href="http://www.rfc1149.net/sam.html">Samuel Tardieu</a> (code, localization FR)\n
    · serenity (localization FR)\n
    · Shan, a.k.a. ShakurNO (localization NO)\n
    · thiasB (code, loc. DE EN)\n
    · YraFyra (code, loc. SV)\n
    · zenobios (code, loc. DE EN)\n
    \n
    · <a href="http://code.google.com/p/mapsforge/">Mapsforge</a> (OSM-rendering)\n
    · <a href="http://thenounproject.com/">The Noun Project</a> (basis for attribute icons)\n
    · <a href="http://commons.apache.org/">The Apache Commons Project</a>\n
  </string>
  <string name="changelog">\n
    <b>15.09.2011</b>\n
    · new: sort by state, sort by find count\n
    · new: experimental support for .gpx from opencaching.com\n
    · new: scan QR code to open cache description (Barcode Scanner from Market)\n
    · new: context menu on stored caches button (main screen)\n
    · new: compass immediately shows the right direction\n
    · new: active filters are shown in list mode\n
    · fix: performance of GPX import\n
    · fix: performance of deleting caches from list\n
    · fix: performance of web traffic\n
    · fix: return to list after GPX import\n
    · fix: fill signature when logging offline\n
    · fix: show strikethrough in caches\n
    · fix: no more empty map previews\n
    · fix: send2c:geo authorization\n
    \n\n
    <b>26.08.2011</b>\n
    · new: street view\n
    · new: attribute icons\n
    · new: experimental support for .gpx from opencaching.de\n
    · fix: log-dates\n
    · fix: coordinates input\n
    · fix: nearby list performance update\n
    \n\n
    <b>22.08.2011</b>\n
    · fix: due to GC.com changes c:geo hangs in displaying cache detail\n
    \n\n
    <b>20.08.2011</b>\n
    · fix: Additional adaption to GC.com changes\n
    \n\n
    <b>19.08.2011</b>\n
    · new: Numeric entry for coordinates\n
    · fix: adaption to GC.com changes\n
	\n\n
    <b>15.08.2011</b>\n
    · new: OpenStreetMap support\n
	· new: Send to c:geo from web\n
    · new: Export field notes\n
    · new: Clear history\n
	· fix: A lot of bugs\n
	\n</string>
</resources>