<?xml version="1.0" encoding="utf-8"?>
<!-- 
Global search doesn't use our search provider anymore since kitkat: https://stackoverflow.com/a/28642155/44089.
So don't be confused if our app is nowhere in the search settings. Only specially Google Now enabled apps and those using App Indexing are shown.
-->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:hint="@string/search_bar_hint"
    android:imeOptions="actionSearch"
    android:includeInGlobalSearch="true"
    android:inputType="textNoSuggestions"
    android:label="@string/app_name"
    android:searchSettingsDescription="@string/search_bar_desc"
    android:searchSuggestAuthority="cgeo.geocaching.search.SuggestionProvider"
    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer" >

</searchable>