<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="?background_color" >
	<LinearLayout style="@style/action_bar">
		<ImageView style="@style/action_bar_action"
				android:onClick="goHome" />
		<View style="@style/action_bar_separator" />
		<TextView style="@style/action_bar_title" />
		<ImageView style="@style/action_bar_action"
				android:src="@drawable/actionbar_manual"
				android:onClick="goManual" />
	</LinearLayout>
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<RelativeLayout android:layout_width="match_parent" style="@style/separator_horizontal_layout">
				<View style="@style/separator_horizontal"></View>
				<TextView android:text="@string/search_direction_rel" style="@style/separator_horizontal_headline"></TextView>
			</RelativeLayout>
			<RelativeLayout android:layout_width="match_parent" style="@style/separator_horizontal_layout">
				<View style="@style/separator_horizontal"></View>
				<TextView android:text="@string/search_direction_rel" style="@style/separator_horizontal_headline"></TextView>
			</RelativeLayout>
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/search_coordinates" />
			</RelativeLayout>
			<EditText style="@style/edittext"
					android:id="@+id/latitude"
					android:hint="latitude" />
			<EditText style="@style/edittext"
					android:id="@+id/longitude"
					android:hint="longitude" />
			<Button style="@style/button"
					android:id="@+id/current"
					android:text="@string/waypoint_my_coordinates" />
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/search_direction_rel" />
			</RelativeLayout>
			<EditText style="@style/edittext"
					android:id="@+id/bearing"
					android:inputType="numberDecimal"
					android:hint="@string/waypoint_bearing" />
			<EditText style="@style/edittext"
					android:id="@+id/distance"
					android:hint="@string/waypoint_distance" />
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/search_history" />
			</RelativeLayout>
			<ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@android:id/list"></ListView>	
		</LinearLayout>
	</ScrollView>
</LinearLayout>
